2005-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/tutorial.itely (Running LilyPond for the
	first time): Add/replace some @rglos links.  TODO: add more
	@rglos links in tutorial, test non-intrusiveness (.css).

	* stepmake/bin/add-html-footer.py (do_file): Remove info's
	annoying's indication of referencing external document.

	* Documentation/user/GNUmakefile: Split version of glossary too.
	* Documentation/user/macros.itexi (@rglos): Have makeinfo produce
	links, not only for html.

	* Documentation/user/introduction.itely: Fix some links for other
	than html, do not use `here' as link name.

2005-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/documentation-generate.scm (string-append): Fix @usermanref,
	@glossaryref.

2005-03-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/page-layout.scm (default-page-make-stencil): only add header
	if existing and not empty. Fixes spurious programming error.

	* lily/span-bar.cc (print): don't make rounded edges for spanbars.

2005-03-31  Erlend Aasland  <erlenda@gmail.com>

	* scm/output-tex.scm: implement {re,}setcolor
	* tex/lilyponddefs.tex: use color package

2005-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (local-WWW-post): Restore .htaccess and .html
	additions to website.

	* Documentation/user/lilypond.tely: Remove reference to ps.gz.

	* Documentation/user/macros.itexi: Fix @usermanref html links in
	split documents: use @inforef.

2005-03-30  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/programming-interface.itely: minor fix.

	* Documentation/user/advanced-notation.itely: added info to
	Metronome markings.

2005-03-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-lib.scm (make-stencil-boxer): Junk code duplication,
	use box-stencil.  Remove y-padding argument.
	(make-stencil-circler): New function.

	* buildscripts/lilypond-words.py (F): 
	* elisp/SConscript (a): 
	* elisp/GNUmakefile (LILYPOND_WORDS_DEPENDS):
	* vim/SConscript (a): 