@@ -64,7 +64,7 @@
 	    <li>
 <a class="title" href="../user/out-www/lilypond/index.html">User manual</a>
 (in <a class="title" href="../user/out-www/lilypond.pdf">PDF</a>, in
-<a class="title" href="../user/out-www/lilypond.html">one big page</a>)
+<a class="title" href="../user/out-www/lilypond.html">one big page, ~4Mb</a>)
 
      <br>(everything about LilyPond)
      
@@ -93,7 +93,7 @@
      <br>(definitions for tweaking)
 
 	    <li>
-     <a  class="title" href="../../input/regression/out-www/collated-files.html">Regression tests</a> (in <a  class="title" href="../../input/regression/out-www/collated-files.pdf">PDF</a>)
+     <a  class="title" href="../../input/regression/out-www/collated-files.html">Regression tests</a> (in <a  class="title" href="../../input/regression/out-www/collated-files.pdf">PDF</a>) ~ 2.4Mb
 
      <br>(for developers)
 
@@ -124,8 +124,8 @@
           &nbsp;
           <ul>
             <li>
-	    	                 <a class="title" href="http://www.gnu.org/copyleft/gpl.html">License</a>
-				 <br> (the GPL) 
+	      <a class="title" href="http://www.gnu.org/copyleft/gpl.html">License</a>
+	      <br> (the GNU GPL) 
           </ul>
           </td>
         </tr>
