@@ -1,5 +1,7 @@
 2005-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* Documentation/index.html.in: Add size estimates with some big pages.
+
 	* Documentation/user/tutorial.itely (Running LilyPond for the
 	first time): Add/replace some @rglos links.  TODO: add more
 	@rglos links in tutorial, test non-intrusiveness (.css).
